--- a/Sponsors.html
+++ b/Sponsors.html
@@ -14,10 +14,10 @@
       <li>Tseshaht Market</li>
       <li>First Nations Health Autority</li>
       <section>
-            <p>   <img src="https://myramack.github.io/Websites/tseshahtlogo.jpg" alt=" tseshaht logo"  width="40%" height="60%"/>
+            <p>   <img src="https://myramack.github.io/Websites/tseshahtlogo.jfif" alt=" tseshaht logo"  width="40%" height="60%"/>
 
-                  <img src="https://myramack.github.io/Websites/tseshahtmarketlogo.jpg" alt=" tseshaht  market logo"  width="40%" height="60%"/>
-                  <img src="https://myramack.github.io/Websites/fnhalogo.jpg" alt=" fnha logo"  width="40%" height="60%"/>
+                  <img src="https://myramack.github.io/Websites/tseshahtmarketlogo.jfif" alt=" tseshaht  market logo"  width="40%" height="60%"/>
+                  <img src="https://myramack.github.io/Websites/fnhalogo.png" alt=" fnha logo"  width="40%" height="60%"/>
             </P>
 
       </section>
