--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <h1>
     <title>Tseshaht Canoe Family</title>
     </h1>
+    <!-- <h3><P class="t"> photo credit to Wallace Watts </p></h3> -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <header>
+      <header>
     <h1 class="title">Tseshaht Canoe Family</h1>
         <div class="banner"></div>
-    <div class="container">
+            <div class="container">
          <section>
                <p>   <img src="https://myramack.github.io/Websites/images/Canoefamilylogo.jpg" alt="Canoefamilylogo"  width="40%" height="60%"/> </P>
               <p> photo Credit to Tseshaht Canoe family </p>
